# amort

./: CMakeLists.txt  main.cpp
include/: loan.h  login.h  menu.h  settings.h  user.h  utils.h
src/: loan.cpp  login.cpp  menu.cpp  settings.cpp  user.cpp  utils.cpp
tests/: test_loan.cpp  test_user.cpp  test_utils.cpp
